--- a/index.html
+++ b/index.html
@@ -1,176 +1,166 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T-Hub News</title>
-    <style>
-        body {
-            background-color: #121212;
-            color: #e0e0e0;
-            font-family: 'Courier New', Courier, monospace;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>T-Hub News</title>
+  <style>
+    :root {
+      --ios-blue: #0a84ff;
+      --ios-gray: #8e8e93;
+      --ios-dark-gray: #1c1c1e;
+      --ios-darker-gray: #000000;
+      --ios-text: #ffffff;
+    }
 
-        header {
-            background-color: #1e1e1e;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid #007acc;
-        }
+    body {
+      background-color: var(--ios-darker-gray);
+      color: var(--ios-text);
+      font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      -webkit-font-smoothing: antialiased;
+    }
 
-        header h1 {
-            color: #007acc;
-            margin: 0;
-            font-size: 2.5em;
-        }
+    header {
+      background-color: var(--ios-dark-gray);
+      padding: 20px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 1px 0 rgba(255,255,255,0.1);
+    }
 
-        nav {
-            margin: 20px 0;
-            text-align: center;
-        }
+    header h1 {
+      color: var(--ios-text);
+      margin: 0;
+      font-size: 1.5em;
+      font-weight: 600;
+    }
 
-        nav a {
-            color: #007acc;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
+    nav {
+      margin: 20px 0;
+      overflow-x: auto;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+      padding: 0 20px;
+    }
 
-        nav a:hover {
-            text-decoration: underline;
-        }
+    nav a {
+      color: var(--ios-blue);
+      text-decoration: none;
+      margin-right: 15px;
+      font-weight: 500;
+      font-size: 0.9em;
+    }
 
-        main {
-            padding: 20px;
-            max-width: 900px;
-            margin: auto;
-        }
+    main {
+      padding: 20px;
+      max-width: 600px;
+      margin: auto;
+    }
 
-        section {
-            margin-bottom: 50px;
-        }
+    section {
+      background-color: var(--ios-dark-gray);
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+    }
 
-        section h2 {
-            color: #007acc;
-            margin-top: 0;
-        }
+    section h2 {
+      color: var(--ios-text);
+      margin-top: 0;
+      font-size: 1.2em;
+      font-weight: 600;
+    }
 
-        section p {
-            font-size: 1.1em;
-        }
+    section p {
+      font-size: 0.9em;
+      color: var(--ios-gray);
+    }
 
-        .back-to-top {
-            display: block;
-            text-align: right;
-            margin-top: 20px;
-        }
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      background-color: var(--ios-dark-gray);
+      margin-top: 20px;
+    }
 
-        .back-to-top a {
-            color: #007acc;
-            text-decoration: none;
-            font-weight: bold;
-        }
+    footer p {
+      margin: 0;
+      font-size: 0.8em;
+      color: var(--ios-gray);
+    }
 
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background-color: #1e1e1e;
-            border-top: 2px solid #007acc;
-            margin-top: 20px;
-        }
+    .ad {
+      margin-top: 20px;
+      font-size: 0.8em;
+      background-color: var(--ios-dark-gray);
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+    }
 
-        footer p {
-            margin: 0;
-            font-size: 0.9em;
-            color: #8c8c8c;
-        }
-    </style>
+    .ad a {
+      color: var(--ios-blue);
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    a {
+      color: var(--ios-blue);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+<!-- CSS_ADSBLOCK_START -->
+<link rel="stylesheet" href="https://adblockers.opera-mini.net/css_block/default-domainless.css" type="text/css" />
+<!-- CSS_ADSBLOCK_END -->
 </head>
 <body>
-    <header>
-        <h1 id="top">T-Hub News</h1>
-    </header>
-
-    <nav>
-        <a href="#news1">News 1</a>
-        <a href="#news2">News 2</a>
-        <a href="#news3">News 3</a>
-        <a href="#news4">News 4</a>
-        <a href="#news5">News 5</a>
-    </nav>
-
-    <main>
-        <section id="news1">
-            <h2>X Faces Privacy Complaints in the EU</h2>
-            <p>
-                X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints 
-                after it helped itself to the data of users in the European Union for training AI models without asking 
-                people’s consent.
-                <br><br>
-                The nine complaints against X, which have been filed with data protection authorities in Austria, Belgium, 
-                France, Greece, Ireland, Italy, the Netherlands, Poland, and Spain, accuse it of failing this step by 
-                processing Europeans’ posts to train AI without obtaining their consent.
-                <br><br>
-                <a href="https://tcrn.ch/4cDZuAh" target="_blank" style="color: #007acc;">Read more here</a>
-            </p>
-            <div class="back-to-top">
-                <a href="#top">Back to Top</a>
-            </div>
-        </section>
-
-        <section id="news2">
-            <h2>Made by Google 2024 Event Recap</h2>
-            <p>
-                The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event, 
-                we have rounded up the announcements and reveals from Google’s biggest hardware event of the year.
-                <br><br>
-                Notably, this year’s event is preceding Apple’s typical September iPhone reveal, with a focus on AI 
-                that anyone watching any tech event in the past couple years is well familiar with.
-                <br><br>
-                <a href="https://tcrn.ch/3yO07Jn" target="_blank" style="color: #007acc;">Read the full list of Google’s reveals here</a>
-            </p>
-            <div class="back-to-top">
-                <a href="#top">Back to Top</a>
-            </div>
-        </section>
-
-        <section id="news3">
-            <h2>Building a Software Business: The Right Way?</h2>
-            <p>
-                What is the right way to build a software business?
-                <br><br>
-                Many startup advisers say that B2B software should solve one pain point, gain customers, then add features 
-                as their company grows. Serial founder Parker Conrad, currently the founder and CEO of Rippling, an HR software 
-                startup valued at $13.5 billion in April, thinks that’s the wrong way to do it.
-                <br><br>
-                <a href="https://tcrn.ch/4fIvNAG" target="_blank" style="color: #007acc;">Read why here</a>
-            </p>
-            <div class="back-to-top">
-                <a href="#top">Back to Top</a>
-            </div>
-        </section>
-
-        <section id="news4">
-            <h2>The Latest Generative Models in Film and TV</h2>
-            <p>
-                The latest generative models make for great demos, but are they really about to change how people make movies and TV?
-                <br><br>
-                Not in the short term, according to filmmaking and VFX experts. But in the long term, the changes could be literally beyond our imagining.
-                <br><br>
-                <a href="https://tcrn.ch/3WNhVMX" target="_blank" style="color: #007acc;">Read how here</a>
-            </p>
-            <div class="back-to-top">
-                <a href="#top">Back to Top</a>
-            </div>
-        </section>
-
-    </main>
-
-    <footer>
-        <p>© 2024 T-Hub News. All Rights Reserved.</p>
-    </footer>
+  <header>
+    <h1 id="top">T-Hub News</h1>
+  </header>
+  <nav>
+    <a href="#news1">News 1</a>
+    <a href="#news2">News 2</a>
+    <a href="#news3">News 3</a>
+    <a href="#news4">News 4</a>
+    <a href="#news5">News 5</a>
+  </nav>
+  <main>
+    <section id="news1">
+      <h2>X Faces Privacy Complaints in the EU</h2>
+      <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints after it helped itself to the data of users in the European Union for training AI models without asking people's consent.</p>
+      <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p>
+    </section>
+    <section id="news2">
+      <h2>Made by Google 2024 Event Recap</h2>
+      <p>The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event, we have rounded up the announcements and reveals from Google's biggest hardware event of the year.</p>
+      <p><a href="https://tcrn.ch/3yO07Jn" target="_blank">Read the full list of Google's reveals here</a></p>
+    </section>
+    <section id="news3">
+      <h2>Building a Software Business: The Right Way?</h2>
+      <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong way to do it.</p>
+      <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p>
+    </section>
+    <section id="news4">
+      <h2>The Latest Generative Models in Film and TV</h2>
+      <p>The latest generative models make for great demos, but are they really about to change how people make movies and TV? Not in the short term, according to filmmaking and VFX experts. But in the long term, the changes could be literally beyond our imagining.</p>
+      <p><a href="https://tcrn.ch/3WNhVMX" target="_blank">Read how here</a></p>
+    </section>
+  </main>
+  <footer>
+    <p>© 2024 T-Hub News. All Rights Reserved.</p>
+    <div class="ad">
+      <p>Join our WhatsApp channel for more updates: <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" target="_blank">Click here</a></p>
+    </div>
+  </footer>
 
 </body></html>
