--- a/index.html
+++ b/index.html
@@ -199,133 +199,4 @@
     <p>© 2024 T-Hub News. All Rights Reserved.</p>
   </footer>
 </body>
-</html>      color: var(--ios-text);
-      margin: 0;
-      font-size: 1.5em;
-      font-weight: 600;
-    }
-
-    nav {
-      margin: 20px 0;
-      overflow-x: auto;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-      padding: 0 20px;
-    }
-
-    nav a {
-      color: var(--ios-blue);
-      text-decoration: none;
-      margin-right: 15px;
-      font-weight: 500;
-      font-size: 0.9em;
-    }
-
-    main {
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    section {
-      background-color: var(--ios-dark-gray);
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
-    }
-
-    section h2 {
-      color: var(--ios-text);
-      margin-top: 0;
-      font-size: 1.2em;
-      font-weight: 600;
-    }
-
-    section p {
-      font-size: 0.9em;
-      color: var(--ios-gray);
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px 0;
-      background-color: var(--ios-dark-gray);
-      margin-top: 20px;
-    }
-
-    footer p {
-      margin: 0;
-      font-size: 0.8em;
-      color: var(--ios-gray);
-    }
-
-    .ad {
-      margin-top: 20px;
-      font-size: 0.8em;
-      background-color: var(--ios-dark-gray);
-      border-radius: 10px;
-      padding: 15px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
-    }
-
-    .ad a {
-      color: var(--ios-blue);
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    a {
-      color: var(--ios-blue);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-<!-- CSS_ADSBLOCK_START -->
-<link rel="stylesheet" href="https://adblockers.opera-mini.net/css_block/default-domainless.css" type="text/css" />
-<!-- CSS_ADSBLOCK_END -->
-</head>
-<body>
-  <header>
-    <h1 id="top">T-Hub News</h1>
-  </header>
-  <nav>
-    <a href="#news1">News 1</a>
-    <a href="#news2">News 2</a>
-    <a href="#news3">News 3</a>
-    <a href="#news4">News 4</a>
-    <a href="#news5">News 5</a>
-  </nav>
-  <main>
-    <section id="news1">
-      <h2>X Faces Privacy Complaints in the EU</h2>
-      <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints after it helped itself to the data of users in the European Union for training AI models without asking people's consent.</p>
-      <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p>
-    </section>
-    <section id="news2">
-      <h2>Made by Google 2024 Event Recap</h2>
-      <p>The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event, we have rounded up the announcements and reveals from Google's biggest hardware event of the year.</p>
-      <p><a href="https://tcrn.ch/3yO07Jn" target="_blank">Read the full list of Google's reveals here</a></p>
-    </section>
-    <section id="news3">
-      <h2>Building a Software Business: The Right Way?</h2>
-      <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong way to do it.</p>
-      <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p>
-    </section>
-    <section id="news4">
-      <h2>The Latest Generative Models in Film and TV</h2>
-      <p>The latest generative models make for great demos, but are they really about to change how people make movies and TV? Not in the short term, according to filmmaking and VFX experts. But in the long term, the changes could be literally beyond our imagining.</p>
-      <p><a href="https://tcrn.ch/3WNhVMX" target="_blank">Read how here</a></p>
-    </section>
-  </main>
-  <footer>
-    <p>© 2024 T-Hub News. All Rights Reserved.</p>
-    <div class="ad">
-      <p>Join our WhatsApp channel for more updates: <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" target="_blank">Click here</a></p>
-    </div>
-  </footer>
-
-</body></html>
+  </html>
