--- a/index.html
+++ b/index.html
@@ -143,18 +143,24 @@
     <a href="#news2">News 2</a>
     <a href="#news3">News 3</a>
     <a href="#news4">News 4</a>
+    <a href="#news5">News 5</a>
     <a href="#ad1">Ad 1</a>
     <a href="#ad2">Ad 2</a>
   </nav>
   <main>
     <section id="news1">
-      <h2>X Faces Privacy Complaints in the EU</h2>
-      <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints after it helped itself to the data of users in the European Union for training AI models without asking people's consent.</p>
-      <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p>
+      <h2>X begins rolling out support for passkeys on Android</h2>
+      <p>X, formerly known as Twitter, has announced that it's rolling out support for passkeys on Android. The launch comes as the social network rolled out support for passkeys to all iOS users back in April.</p>
+      <p>Passkey logins make it harder for bad actors to remotely access your accounts since they would also need physical access to your phone. Unlike standard logins, passkeys use Face ID or Touch ID, a PIN, or a physical security authentication key to validate logins.</p>
+      <p>Passkeys are a relatively new technology that removes the need to rely on username and password combinations, which can be susceptible to phishing and other issues.</p>
+      <p>X is one of many tech companies to introduce passkey support in the past year or so. Other big names that have done so include Apple, Microsoft, Amazon, Google, PayPal, TikTok, WhatsApp and GitHub.</p>
+      <p>On X, the addition of passkey support could help users who previously relied on SMS 2FA, an option that X removed for free users last year.</p>
+      <p>You can enable passkeys on X by logging into the app, clicking "Your account" in the navigation bar and then selecting "Settings and privacy." Next, you need to click "Security and account access," and then "Security." Under the "Additional password protection" options select "Passkey." Click the "Add a passkey" option and then follow the prompts to enable the feature.</p>
+      <p><em>8:00 AM WAT • August 16, 2024</em></p>
     </section>
 
     <section id="ad1" class="ad">
-      <h3>Save Money with PalmPay!</h3>
+      <h3>AD • Save Money with PalmPay!</h3>
       <p>Hey there! I've been using the PalmPay app, and it's been a game-changer for my finances. Here's why you should try it:</p>
       <ul>
         <li>Free transfers to any bank</li>
@@ -166,19 +172,19 @@
     </section>
 
     <section id="news2">
+      <h2>X Faces Privacy Complaints in the EU</h2>
+      <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints after it helped itself to the data of users in the European Union for training AI models without asking people's consent.</p>
+      <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p>
+    </section>
+
+    <section id="news3">
       <h2>Made by Google 2024 Event Recap</h2>
       <p>The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event, we have rounded up the announcements and reveals from Google's biggest hardware event of the year.</p>
       <p><a href="https://tcrn.ch/3yO07Jn" target="_blank">Read the full list of Google's reveals here</a></p>
     </section>
 
-    <section id="news3">
-      <h2>Building a Software Business: The Right Way?</h2>
-      <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong way to do it.</p>
-      <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p>
-    </section>
-
     <section id="ad2" class="ad">
-      <h3>Stay Updated with T-Hub News</h3>
+      <h3>AD • Stay Updated with T-Hub News</h3>
       <p>Want to get the latest tech news and updates delivered straight to your phone? Join our WhatsApp channel!</p>
       <ul>
         <li>Instant notifications for breaking news</li>
@@ -189,6 +195,12 @@
     </section>
 
     <section id="news4">
+      <h2>Building a Software Business: The Right Way?</h2>
+      <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong way to do it.</p>
+      <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p>
+    </section>
+
+    <section id="news5">
       <h2>The Latest Generative Models in Film and TV</h2>
       <p>The latest generative models make for great demos, but are they really about to change how people make movies and TV? Not in the short term, according to filmmaking and VFX experts. But in the long term, the changes could be literally beyond our imagining.</p>
       <p><a href="https://tcrn.ch/3WNhVMX" target="_blank">Read how here</a></p>
@@ -199,4 +211,4 @@
     <p>© 2024 T-Hub News. All Rights Reserved.</p>
   </footer>
 </body>
-  </html>
+      </html>
