--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
    <section id="news4"> 
     <h2>Made by Google Unveils New Pixel Devices and AI Tools</h2> 
     <p>Made by Google was this week, featuring a full range of reveals from Google’s biggest hardware event. Google unveiled its new lineup of Pixel 9 phones, including the $1,799 Pixel 9 Fold Pro; advanced AI-powered photo-editing tools; and the new Pixel Buds Pro 2, which are infused with Gemini AI. The company also announced Gemini Live, a conversational AI voice assistant to compete with OpenAI’s Advanced Voice Mode, though the live demo had a few hiccups.</p> 
-    <p><em>6:16 PM WAT • August 18, 2024</em></p>
-   </section>
+    <p><em>6:16 PM WAT • August 18, 2024</em></p> 
+   </section> 
    <section id="news5"> 
     <h2>Building a Software Business: The Right Way?</h2> 
-    <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong ```html
+    <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong ```html </p>
     <p>way to do it.</p> 
     <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p> 
    </section> 
@@ -196,9 +196,15 @@
      <li>Easy access to our latest articles</li> 
     </ul> <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" class="ad-button" target="_blank">Join Our WhatsApp Channel</a> 
    </section> 
+   <section id="news7">
+    <h2>Pavel Durov Claims to Have Fathered Over 100 Children</h2>
+    <p>Pavel Durov, founder of Telegram, has made headlines with his claim of fathering over 100 biological children through sperm donations made 15 years ago. This revelation came during his recent arrest in France, linked to an investigation into criminal activities on the app.</p>
+    <p>Durov stated he initially donated sperm to help a friend, later continuing after being told he was "top-tier donor material." He plans to open-source his DNA to help his children connect and avoid accidental marriages.</p>
+    <p><em>Published: August 26, 2024</em></p>
+</section>
   </main> 
   <footer> 
    <p>© 2024 T-Hub News. All Rights Reserved.</p> 
   </footer> 
  </body>
-  </html>
+</html>
