--- a/index.html
+++ b/index.html
@@ -1,210 +1,105 @@
 <!doctype html>
-<html lang="en"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
-  <title>T-Hub News</title> 
-  <style>
-    :root {
-      --ios-blue: #0a84ff;
-      --ios-gray: #8e8e93;
-      --ios-dark-gray: #1c1c1e;
-      --ios-darker-gray: #000000;
-      --ios-text: #ffffff;
-    }
-
-    body {
-      background-color: var(--ios-darker-gray);
-      color: var(--ios-text);
-      font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    header {
-      background-color: var(--ios-dark-gray);
-      padding: 20px;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 1px 0 rgba(255,255,255,0.1);
-    }
-
-    header h1 {
-      color: var(--ios-text);
-      margin: 0;
-      font-size: 1.5em;
-      font-weight: 600;
-    }
-
-    nav {
-      margin: 20px 0;
-      overflow-x: auto;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-      padding: 0 20px;
-    }
-
-    nav a {
-      color: var(--ios-blue);
-      text-decoration: none;
-      margin-right: 15px;
-      font-weight: 500;
-      font-size: 0.9em;
-    }
-
-    main {
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    section {
-      background-color: var(--ios-dark-gray);
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
-    }
-
-    section h2 {
-      color: var(--ios-text);
-      margin-top: 0;
-      font-size: 1.2em;
-      font-weight: 600;
-    }
-
-    section p {
-      font-size: 0.9em;
-      color: var(--ios-gray);
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px 0;
-      background-color: var(--ios-dark-gray);
-      margin-top: 20px;
-    }
-
-    footer p {
-      margin: 0;
-      font-size: 0.8em;
-      color: var(--ios-gray);
-    }
-
-    a {
-      color: var(--ios-blue);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .ad {
-      background-color: rgba(255,255,255,0.05);
-      border-radius: 8px;
-      padding: 15px;
-      margin-bottom: 20px;
-    }
-
-    .ad h3 {
-      color: var(--ios-blue);
-      margin-top: 0;
-      font-size: 1.1em;
-    }
-
-    .ad-button {
-      display: inline-block;
-      background-color: var(--ios-blue);
-      color: var(--ios-text);
-      padding: 8px 16px;
-      border-radius: 20px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-
-    .ad-button:hover {
-      background-color: #0056b3;
-      text-decoration: none;
-    }
-  </style> 
- </head> 
- <body> 
-  <header> 
-   <h1 id="top">T-Hub News</h1> 
-  </header> 
-  <nav> <a href="#news1">News 1</a> <a href="#news2">News 2</a> <a href="#news3">News 3</a> <a href="#news4">News 4</a> <a href="#news5">News 5</a> <a href="#news6">News 6</a> <a href="#ad1">Ad 1</a> <a href="#ad2">Ad 2</a> 
-  </nav> 
-  <main> 
-   <section id="news1"> 
-    <h2>X begins rolling out support for passkeys on Android</h2> 
-    <p>X, formerly known as Twitter, has announced that it's rolling out support for passkeys on Android. The launch comes as the social network rolled out support for passkeys to all iOS users back in April.</p> 
-    <p>Passkey logins make it harder for bad actors to remotely access your accounts since they would also need physical access to your phone. Unlike standard logins, passkeys use Face ID or Touch ID, a PIN, or a physical security authentication key to validate logins.</p> 
-    <p>Passkeys are a relatively new technology that removes the need to rely on username and password combinations, which can be susceptible to phishing and other issues.</p> 
-    <p>X is one of many tech companies to introduce passkey support in the past year or so. Other big names that have done so include Apple, Microsoft, Amazon, Google, PayPal, TikTok, WhatsApp and GitHub.</p> 
-    <p>On X, the addition of passkey support could help users who previously relied on SMS 2FA, an option that X removed for free users last year.</p> 
-    <p>You can enable passkeys on X by logging into the app, clicking "Your account" in the navigation bar and then selecting "Settings and privacy." Next, you need to click "Security and account access," and then "Security." Under the "Additional password protection" options select "Passkey." Click the "Add a passkey" option and then follow the prompts to enable the feature.</p> 
-    <p><em>8:00 AM WAT • August 16, 2024</em></p> 
-   </section> 
-   <section id="ad1" class="ad"> 
-    <h3>AD • Save Money with PalmPay!</h3> 
-    <p>Hey there! I've been using the PalmPay app, and it's been a game-changer for my finances. Here's why you should try it:</p> 
-    <ul> 
-     <li>Free transfers to any bank</li> 
-     <li>Cashback on every transaction</li> 
-     <li>₦1000 welcome bonus just for signing up</li> 
-    </ul> 
-    <p>Join me on PalmPay and start saving today! Use my code "EPNZ5622" when you sign up.</p> <a href="https://link.palmpay.com/MgxhR" class="ad-button" target="_blank">Get PalmPay Now</a> 
-   </section> 
-   <section id="news2"> 
-    <h2>X Faces Privacy Complaints in the EU</h2> 
-    <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints after it helped itself to the data of users in the European Union for training AI models without asking people's consent.</p> 
-    <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p> 
-   </section> 
-   <section id="news3"> 
-    <h2>Made by Google 2024 Event Recap</h2> 
-    <p>The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event, we have rounded up the announcements and reveals from Google's biggest hardware event of the year.</p> 
-    <p><a href="https://tcrn.ch/3yO07Jn" target="_blank">Read the full list of Google's reveals here</a></p> 
-   </section> 
-   <section id="news4"> 
-    <h2>Made by Google Unveils New Pixel Devices and AI Tools</h2> 
-    <p>Made by Google was this week, featuring a full range of reveals from Google’s biggest hardware event. Google unveiled its new lineup of Pixel 9 phones, including the $1,799 Pixel 9 Fold Pro; advanced AI-powered photo-editing tools; and the new Pixel Buds Pro 2, which are infused with Gemini AI. The company also announced Gemini Live, a conversational AI voice assistant to compete with OpenAI’s Advanced Voice Mode, though the live demo had a few hiccups.</p> 
-    <p><em>6:16 PM WAT • August 18, 2024</em></p> 
-   </section> 
-   <section id="news5"> 
-    <h2>Building a Software Business: The Right Way?</h2> 
-    <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point, gain customers, then add features as their company grows. Serial founder Parker Conrad thinks that's the wrong ```html </p>
-    <p>way to do it.</p> 
-    <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p> 
-   </section> 
-   <section id="news6"> 
-    <h2>The Latest Generative Models in Film and TV</h2> 
-    <p>The latest generative models make for great demos, but are they really about to change how people make movies and TV? Not in the short term, according to filmmaking and VFX experts. But in the long term, the changes could be literally beyond our imagining.</p> 
-    <p><a href="https://tcrn.ch/3WNhVMX" target="_blank">Read how here</a></p> 
-   </section> 
-   <section id="ad2" class="ad"> 
-    <h3>AD • Stay Updated with T-Hub News</h3> 
-    <p>Want to get the latest tech news and updates delivered straight to your phone? Join our WhatsApp channel!</p> 
-    <ul> 
-     <li>Instant notifications for breaking news</li> 
-     <li>Exclusive content and insights</li> 
-     <li>Easy access to our latest articles</li> 
-    </ul> <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" class="ad-button" target="_blank">Join Our WhatsApp Channel</a> 
-   </section> 
-   <section id="news7">
-    <h2>Pavel Durov Claims to Have Fathered Over 100 Children</h2>
-    <p>Pavel Durov, founder of Telegram, has made headlines with his claim of fathering over 100 biological children through sperm donations made 15 years ago. This revelation came during his recent arrest in France, linked to an investigation into criminal activities on the app.</p>
-    <p>Durov stated he initially donated sperm to help a friend, later continuing after being told he was "top-tier donor material." He plans to open-source his DNA to help his children connect and avoid accidental marriages.</p>
-    <p><em>Published: August 26, 2024</em></p>
-</section>
-  </main> 
-  <footer> 
-   <p>© 2024 T-Hub News. All Rights Reserved.</p> 
-  </footer> 
- </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>T-Hub News</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 id="top">T-Hub News</h1>
+  </header>
+  <nav>
+    <a href="#news1">News 1</a>
+    <a href="#news2">News 2</a>
+    <a href="#news3">News 3</a>
+    <a href="#news4">News 4</a>
+    <a href="#news5">News 5</a>
+    <a href="#news6">News 6</a>
+    <a href="#news7">News 7</a>
+    <a href="#news8">News 8</a>
+    <a href="#ad1">Ad 1</a>
+    <a href="#ad2">Ad 2</a>
+  </nav>
+  <main>
+    <section id="news1">
+      <h2>X begins rolling out support for passkeys on Android</h2>
+      <p>X, formerly known as Twitter, has announced that it's rolling out support for passkeys on Android...</p>
+      <p><em>8:00 AM WAT • August 16, 2024</em></p>
+    </section>
+    <section id="ad1" class="ad">
+      <h3>AD • Save Money with PalmPay!</h3>
+      <p>Hey there! I've been using the PalmPay app, and it's been a game-changer for my finances...</p>
+      <a href="https://link.palmpay.com/MgxhR" class="ad-button" target="_blank">Get PalmPay Now</a>
+    </section>
+    <section id="news2">
+      <h2>X Faces Privacy Complaints in the EU</h2>
+      <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints...</p>
+      <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p>
+    </section>
+    <section id="news3">
+      <h2>Made by Google 2024 Event Recap</h2>
+      <p>The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event...</p>
+      <p><a href="https://tcrn.ch/3yO07Jn" target="_blank">Read the full list of Google's reveals here</a></p>
+    </section>
+    <section class="ad">
+      <h3>🌟 Join IceBerk and Start Earning! 🌟</h3>
+      <p class="ad-text">
+        Hey there! 🚀 IceBerk is a simple and fun platform where you can complete easy tasks like subscribing to Telegram channels and earn rewards! 🤑
+      </p>
+      <p class="ad-text">
+        💎 Why Join IceBerk?
+        - Easy Tasks: Complete simple tasks in minutes.
+        - Instant Rewards: Get rewarded instantly for your efforts.
+        - Community: Join a growing community of like-minded individuals.
+      </p>
+      <a href="https://t.me/iceberobot" class="ad-button">🔗 Join IceBerk Now and Start Earning</a>
+      <p class="ad-text">
+        Don't miss out on this opportunity to earn while you explore new content. See you on IceBerk! 😊
+      </p>
+    </section>
+    <section id="news4">
+      <h2>Made by Google Unveils New Pixel Devices and AI Tools</h2>
+      <p>Made by Google was this week, featuring a full range of reveals from Google's biggest hardware event...</p>
+      <p><em>6:16 PM WAT • August 18, 2024</em></p>
+    </section>
+    <section id="news5">
+      <h2>Building a Software Business: The Right Way?</h2>
+      <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point...</p>
+      <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p>
+    </section>
+    <section id="news6">
+      <h2>The Latest Generative Models in Film and TV</h2>
+      <p>The latest generative models make for great demos, but are they really about to change how people make movies and TV?</p>
+      <p><a href="https://tcrn.ch/3WNhVMX" target="_blank">Read how here</a></p>
+    </section>
+    <section id="news7">
+      <h2>Pavel Durov Claims to Have Fathered Over 100 Children</h2>
+      <p>Pavel Durov, founder of Telegram, has made headlines with his claim of fathering over 100 biological children...</p>
+      <p><em>Published: August 26, 2024</em></p>
+    </section>
+    <section id="news8">
+      <h2>A Naked-Eye Comet Is Alive And Well, Scientists Say — When To See It</h2>
+      <p>
+        Comet C/2023 A3 Tsuchinshan-ATLAS, discovered in January 2023, is expected to become visible to the naked eye in late September and mid-October 2024. As it approaches perihelion on September 27, astronomers predict it may reach a brightness of magnitude -3, potentially outshining previous comets like NEOWISE.
+      </p>
+      <p>
+        The comet is notable for its large nucleus, estimated between 12 to 25 miles across, and is expected to develop a striking tail as it gets closer to the sun. Observers in the Northern Hemisphere will have the best views, particularly between September 27 and October 2 in the east before sunrise and from October 12 to 31 in the west after sunset.
+      </p>
+      <p>
+        While current predictions suggest it could be exceptionally bright, the exact visibility remains uncertain due to the unpredictable nature of comets. Continuous monitoring will provide better insights into its brightness as it draws nearer to the sun.
+      </p>
+    </section>
+    <section id="ad2" class="ad">
+      <h3>AD • Stay Updated with T-Hub News</h3>
+      <p>Want to get the latest tech news and updates delivered straight to your phone? Join our WhatsApp channel!</p>
+      <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" class="ad-button" target="_blank">Join Our WhatsApp Channel</a>
+    </section>
+  </main>
+  <footer>
+    <p>© 2024 T-Hub News. All Rights Reserved.</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
 </html>
