--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>T-Hub News</title>
+  <title>T-Hub News - Your Source for Latest Tech and News</title>
+  
+  <meta name="description" content="Stay updated with the latest tech news, privacy issues, AI developments, and more at T-Hub News.">
+  <meta name="keywords" content="Tech News, Privacy, AI, Comet Watch, Startups, Google Event, Passkeys, Social Media, Finance, Generative AI">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="T-Hub News - Your Source for Latest Tech and News">
+  <meta property="og:description" content="Discover the latest updates in technology, privacy, and more.">
+  <meta property="og:image" content="thub.jpeg">
+  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="T-Hub News - Your Source for Latest Tech and News">
+  <meta name="twitter:description" content="Stay updated with the latest tech news and updates.">
+  <meta name="twitter:image" content="thub.jpeg">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -82,13 +100,7 @@
     <section id="news8">
       <h2>A Naked-Eye Comet Is Alive And Well, Scientists Say — When To See It</h2>
       <p>
-        Comet C/2023 A3 Tsuchinshan-ATLAS, discovered in January 2023, is expected to become visible to the naked eye in late September and mid-October 2024. As it approaches perihelion on September 27, astronomers predict it may reach a brightness of magnitude -3, potentially outshining previous comets like NEOWISE.
-      </p>
-      <p>
-        The comet is notable for its large nucleus, estimated between 12 to 25 miles across, and is expected to develop a striking tail as it gets closer to the sun. Observers in the Northern Hemisphere will have the best views, particularly between September 27 and October 2 in the east before sunrise and from October 12 to 31 in the west after sunset.
-      </p>
-      <p>
-        While current predictions suggest it could be exceptionally bright, the exact visibility remains uncertain due to the unpredictable nature of comets. Continuous monitoring will provide better insights into its brightness as it draws nearer to the sun.
+        Comet C/2023 A3 Tsuchinshan-ATLAS, discovered in January 2023, is expected to become visible to the naked eye in late September and mid-October 2024...
       </p>
     </section>
     <section id="ad2" class="ad">
