--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a href="#news6">News 6</a>
     <a href="#news7">News 7</a>
     <a href="#news8">News 8</a>
+    <a href="#news9">News 9</a>
     <a href="#ad1">Ad 1</a>
     <a href="#ad2">Ad 2</a>
   </nav>
@@ -108,6 +109,16 @@
       <p>Want to get the latest tech news and updates delivered straight to your phone? Join our WhatsApp channel!</p>
       <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" class="ad-button" target="_blank">Join Our WhatsApp Channel</a>
     </section>
+    <section id="news9">
+  <h2>Apple Announces the iPhone 16: A Leap in Innovation</h2>
+  <p>
+    The newly announced iPhone 16 Pro and iPhone 16 Pro Max introduce several exciting upgrades, including larger displays, advanced camera systems, and extended battery life. Both models feature Apple's new A18 Pro chip and come with Apple Intelligence, a personal AI that helps users by leveraging personal context while maintaining privacy through on-device processing. The Pro models also have improved 48MP cameras capable of capturing 4K120 fps video, offering higher resolution and frame-rate combinations than ever before.
+  </p>
+  <p>
+    Pre-orders for these new iPhones start on September 13, 2024, with general availability from September 20, 2024.
+  </p>
+  <p><em>12:30 PM WAT • September 10, 2024</em></p>
+</section>
   </main>
   <footer>
     <p>© 2024 T-Hub News. All Rights Reserved.</p>
