--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>T-Hub News - Your Source for Latest Tech and News</title>
+  <title>T-Hub News - Your Source for Latest Tech and News Summary</title>
   
   <meta name="description" content="Stay updated with the latest tech news, privacy issues, AI developments, and more at T-Hub News.">
   <meta name="keywords" content="Tech News, Privacy, AI, Comet Watch, Startups, Google Event, Passkeys, Social Media, Finance, Generative AI">
@@ -21,107 +21,51 @@
   <meta name="twitter:title" content="T-Hub News - Your Source for Latest Tech and News">
   <meta name="twitter:description" content="Stay updated with the latest tech news and updates.">
   <meta name="twitter:image" content="thub.jpeg">
-
+  
+  <link rel="icon" type="image/jpeg" href="thub.jpeg">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
+   
 </head>
 <body>
   <header>
-    <h1 id="top">T-Hub News</h1>
+    <h1 id="top"><i class="fas fa-newspaper"></i> T-Hub News</h1>
   </header>
   <nav>
-    <a href="#news1">News 1</a>
-    <a href="#news2">News 2</a>
-    <a href="#news3">News 3</a>
-    <a href="#news4">News 4</a>
-    <a href="#news5">News 5</a>
-    <a href="#news6">News 6</a>
-    <a href="#news7">News 7</a>
-    <a href="#news8">News 8</a>
-    <a href="#news9">News 9</a>
-    <a href="#ad1">Ad 1</a>
-    <a href="#ad2">Ad 2</a>
+    <a href="#news1"><i class="fas fa-star"></i> Featured</a>
+    <a href="#news2"><i class="fas fa-laptop-code"></i> Tech</a>
+    <a href="#news3"><i class="fas fa-shield-alt"></i> Privacy</a>
+    <a href="#news4"><i class="fas fa-robot"></i> AI</a>
+    <a href="#news5"><i class="fas fa-rocket"></i> Startups</a>
+    <a href="#news6"><i class="fas fa-calendar-alt"></i> Events</a>
+    <a href="#news7"><i class="fas fa-lock"></i> Security</a>
+    <a href="#news8"><i class="fas fa-hashtag"></i> Social</a>
+    <a href="#news9"><i class="fas fa-chart-line"></i> Finance</a>
   </nav>
   <main>
-    <section id="news1">
-      <h2>X begins rolling out support for passkeys on Android</h2>
-      <p>X, formerly known as Twitter, has announced that it's rolling out support for passkeys on Android...</p>
-      <p><em>8:00 AM WAT • August 16, 2024</em></p>
+    <!-- Ads Card for Telegram Channel -->
+    <section class="ads-card">
+      <h3><i class="fab fa-telegram"></i> Join Our Telegram Channel!</h3>
+      <p>Stay up-to-date with the latest news and updates. Join our Telegram channel for exclusive content and real-time notifications.</p>
+      <a href="https://t.me/tenocoofficial" class="join-button" target="_blank">Join Now</a>
     </section>
-    <section id="ad1" class="ad">
-      <h3>AD • Save Money with PalmPay!</h3>
-      <p>Hey there! I've been using the PalmPay app, and it's been a game-changer for my finances...</p>
-      <a href="https://link.palmpay.com/MgxhR" class="ad-button" target="_blank">Get PalmPay Now</a>
-    </section>
-    <section id="news2">
-      <h2>X Faces Privacy Complaints in the EU</h2>
-      <p>X, the social media platform owned by Elon Musk, has been targeted with a series of privacy complaints...</p>
-      <p><a href="https://tcrn.ch/4cDZuAh" target="_blank">Read more here</a></p>
-    </section>
-    <section id="news3">
-      <h2>Made by Google 2024 Event Recap</h2>
-      <p>The Made by Google 2024 event has come to an end, and after a busy rumor mill preceding the event...</p>
-      <p><a href="https://tcrn.ch/3yO07Jn" target="_blank">Read the full list of Google's reveals here</a></p>
-    </section>
-    <section class="ad">
-      <h3>🌟 Join IceBerk and Start Earning! 🌟</h3>
-      <p class="ad-text">
-        Hey there! 🚀 IceBerk is a simple and fun platform where you can complete easy tasks like subscribing to Telegram channels and earn rewards! 🤑
-      </p>
-      <p class="ad-text">
-        💎 Why Join IceBerk?
-        - Easy Tasks: Complete simple tasks in minutes.
-        - Instant Rewards: Get rewarded instantly for your efforts.
-        - Community: Join a growing community of like-minded individuals.
-      </p>
-      <a href="https://t.me/iceberobot" class="ad-button">🔗 Join IceBerk Now and Start Earning</a>
-      <p class="ad-text">
-        Don't miss out on this opportunity to earn while you explore new content. See you on IceBerk! 😊
+
+    <section id="news1" class="news-item">
+      <h2><i class="fas fa-robot"></i> Silicon Valley Debates AI Weapons' Autonomy</h2>
+      <p>A growing debate in Silicon Valley centers around the use of fully autonomous AI weapons. While some tech leaders, like Shield AI's Brandon Tseng, oppose such weapons, others, including Anduril's Palmer Luckey and Palantir's Joe Lonsdale, show openness to the idea. The discussion highlights the complex ethical and strategic considerations surrounding AI in warfare.</p>
+      <p><em><i class="far fa-clock"></i> 9:09 AM PDT • October 11, 2024</em></p>
+      <p class="tags">
+        <span class="tag"><i class="fas fa-tag"></i> AI</span>
+        <span class="tag"><i class="fas fa-tag"></i> Technology</span>
+        <span class="tag"><i class="fas fa-tag"></i> Defense</span>
+        <span class="tag"><i class="fas fa-tag"></i> Ethics</span>
       </p>
     </section>
-    <section id="news4">
-      <h2>Made by Google Unveils New Pixel Devices and AI Tools</h2>
-      <p>Made by Google was this week, featuring a full range of reveals from Google's biggest hardware event...</p>
-      <p><em>6:16 PM WAT • August 18, 2024</em></p>
-    </section>
-    <section id="news5">
-      <h2>Building a Software Business: The Right Way?</h2>
-      <p>What is the right way to build a software business? Many startup advisers say that B2B software should solve one pain point...</p>
-      <p><a href="https://tcrn.ch/4fIvNAG" target="_blank">Read why here</a></p>
-    </section>
-    <section id="news6">
-      <h2>The Latest Generative Models in Film and TV</h2>
-      <p>The latest generative models make for great demos, but are they really about to change how people make movies and TV?</p>
-      <p><a href="https://tcrn.ch/3WNhVMX" target="_blank">Read how here</a></p>
-    </section>
-    <section id="news7">
-      <h2>Pavel Durov Claims to Have Fathered Over 100 Children</h2>
-      <p>Pavel Durov, founder of Telegram, has made headlines with his claim of fathering over 100 biological children...</p>
-      <p><em>Published: August 26, 2024</em></p>
-    </section>
-    <section id="news8">
-      <h2>A Naked-Eye Comet Is Alive And Well, Scientists Say — When To See It</h2>
-      <p>
-        Comet C/2023 A3 Tsuchinshan-ATLAS, discovered in January 2023, is expected to become visible to the naked eye in late September and mid-October 2024...
-      </p>
-    </section>
-    <section id="ad2" class="ad">
-      <h3>AD • Stay Updated with T-Hub News</h3>
-      <p>Want to get the latest tech news and updates delivered straight to your phone? Join our WhatsApp channel!</p>
-      <a href="https://whatsapp.com/channel/0029VaJMAov0QeajHa2s3w1W" class="ad-button" target="_blank">Join Our WhatsApp Channel</a>
-    </section>
-    <section id="news9">
-  <h2>Apple Announces the iPhone 16: A Leap in Innovation</h2>
-  <p>
-    The newly announced iPhone 16 Pro and iPhone 16 Pro Max introduce several exciting upgrades, including larger displays, advanced camera systems, and extended battery life. Both models feature Apple's new A18 Pro chip and come with Apple Intelligence, a personal AI that helps users by leveraging personal context while maintaining privacy through on-device processing. The Pro models also have improved 48MP cameras capable of capturing 4K120 fps video, offering higher resolution and frame-rate combinations than ever before.
-  </p>
-  <p>
-    Pre-orders for these new iPhones start on September 13, 2024, with general availability from September 20, 2024.
-  </p>
-  <p><em>12:30 PM WAT • September 10, 2024</em></p>
-</section>
+    <!-- Add more news sections here -->
   </main>
   <footer>
-    <p>© 2024 T-Hub News. All Rights Reserved.</p>
+    <p>© 2024 T-Hub News. All Rights Reserved. <a href="#top"><i class="fas fa-arrow-up"></i> Back to Top</a></p>
   </footer>
   <script src="script.js"></script>
 </body>
